--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,9 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
-      "@services/*": ["services/*"],
-      "@constants/*": ["constants/*"],
-      "@utils/*": ["utils/*"],
+      "@services/*": ["./services/*"],
+      "@constants/*": ["./constants/*"],
+      "@utils/*": ["./utils/*"]
     }
   }
 }
